added all the pages

--- a/src/pages/posts.astro
+++ b/src/pages/posts.astro
@@ -8,7 +8,7 @@ import Layout from "../layouts/main.astro";
   <section class="relative z-20 max-w-2xl mx-auto my-12 px-7 lg:px-0">
     <PageHeading
       title="My Writing"
-      description="Dive into my musings on life and tech in my latest posts; a blend of introspection and innovation. Keep an eye out for fresh insights and updates!"
+      description="Hey there, wanderer of the internet! 🎉 Welcome to the place where your procrastination finally pays off. Dive into this blog and let the wisdom of the ages (or at least the mildly interesting ramblings of yours truly) enlighten your day."
     />
 
     <div class="z-50 flex flex-col items-stretch w-full gap-5 my-8">
