--- a/src/components/home/projects.astro
+++ b/src/components/home/projects.astro
@@ -18,7 +18,7 @@ import Project from "../project.astro";
     class="grid items-stretch w-full sm:grid-cols-2 md:grid-cols-3 gap-7 mt-7"
   >
     {
-      projects.map((project) => {
+      projects.slice(0, 3).map((project) => {
         return (
           <Project
             name={project.name}
