--- a/src/components/home/writings.astro
+++ b/src/components/home/writings.astro
@@ -2,7 +2,7 @@
 import Button from "../button.astro";
 import PostsLoop from "../posts-loop.astro";
 
-const feed = "https://feed.miantiao.me/";
+const feed = "https://footballreportwithme.blogspot.com/";
 ---
 
 <section class="max-w-4xl mx-auto px-7 lg:px-0">
@@ -53,16 +53,8 @@ const feed = "https://feed.miantiao.me/";
               Subscribe my blog
             </h2>
           </div>
-          <p class="mt-2 text-sm text-neutral-600 dark:text-neutral-400">
-            Get my blog updates via <a
-              class="font-bold"
-              href={`https://feedly.com/i/subscription/feed%2F${encodeURIComponent(feed)}`}
-              >Feedly</a
-            >, <a
-              class="font-bold"
-              href={`https://www.inoreader.com/feed/${encodeURIComponent(feed)}`}
-              >Inoreader</a
-            > or <a class="font-bold" href={feed}>RSS</a>.
+          </a
+            > via <a class="font-bold" href={feed}>RSS</a>.
           </p>
           <div class="flex flex-col items-center w-full mt-4 space-y-3">
             <input
