Add Remote File URLs
Signed-off-by: Sagnik Sarkar <sagnik.amity@gmail.com>

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,7 @@ import Layout from "../layouts/main.astro";
 
           <div class="relative z-30 px-10">
             <img
-              src="public/assets/images/Wall-E gif without background.gif"
+              src="https://raw.githubusercontent.com/imtommyshelby/cdn/main/uploads/Wall-E%20gif%20without%20background.gif"
               loading="eager"
               decoding="auto"
               class="relative z-30 w-full aspect-[790/1189] md:max-w-md mx-auto dark:-translate-y-0.5"
