--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -12,7 +12,7 @@ import Layout from "../layouts/main.astro";
       description="Hey, I’m Sagnik from India 🇮🇳, your friendly neighborhood AI Enthusiast 🤖.I’ve dabbled in some pretty cool projects, because, obviously, I’m too modest to brag! When I’m not revolutionizing AI or curating TEDx talks, you’ll find me glued to the football field. Real Madrid is my club, and Ronaldo? Well, duh, he’s the GOAT 🐐. Catch me if you can, I’m out here being amazing!"
     />
 
-    <img src="https://github.com/imtommyshelby/portfolio/blob/eb33527f0945df2d0566c4e8888aafd8ade8cf53/public/assets/images/Elon%20Musk.webp" class="relative z-30 w-full my-10 rounded-xl" />
+    <img src="https://raw.githubusercontent.com/imtommyshelby/cdn/main/uploads/Elon%20Musk.webp" class="relative z-30 w-full my-10 rounded-xl" />
 
     <h2 class="mb-2 text-2xl font-bold dark:text-neutral-200">Short Bio</h2>
     <p
