--- a/src/components/logo.astro
+++ b/src/components/logo.astro
@@ -7,5 +7,5 @@
     >🤖</span
   >
   <!-- Logo Text -->
-  <span class="-translate-y-0.5"> yosagnick!</span>
+  <span class="-translate-y-0.5"> yosagnik!</span>
 </a>
